# save_and_restore

./: README.md
controller/: pubspec.yaml
controller/lib/: application_bar.dart  colors.dart  configuration_toggle_buttons.dart  controller_floating_action_button.dart  left_panel.dart  lite_rolling_switch.dart  main.dart  moc_server.dart  right_panel.dart  shadow_client_c_api.dart  state_maintained.dart  tab_panel.dart  tab_widget.dart  table_widget.dart
controller/lib/common/: router_utility.dart
controller/lib/screens/: save_and_restore_screen.dart
controller/lib/screens/home_screen/: application_bar.dart  configuration_toggle_buttons.dart  home_screen.dart  tab_widget.dart  table_widget.dart
controller/lib/screens/home_screen/panels/: left_panel.dart  right_panel.dart  tab_panel.dart
controller/lib/widgets/: controller_floating_action_button.dart  minimal_expanding_spacer.dart
controller/linux/: CMakeLists.txt  my_application.cc
controller/shadow_client_backend/: CMakeLists.txt  client.cpp  client.hpp  shadow_client_backend.cpp
shadow/: CMakeLists.txt  host_server.cpp  host_server.hpp  main.cpp  shadow.cpp  shadow.hpp  shadow_host_server_message.hpp  vm_handler.cpp  vm_handler.hpp
vbox/bindings/mscom/idl/: VirtualBox.idl
vbox/bindings/mscom/include/: VirtualBox.h
vbox/bindings/webservice/php/lib/: vboxServiceWrappers.php
virtualbox/bindings/c/include/: VBoxCAPI_v6_1.h
virtualbox/bindings/mscom/lib/: VirtualBox_i.c
virtualbox/sdk/bindings/mscom/lib/: VirtualBox.tlb
virtualbox/sdk/bindings/webservice/python/lib/: VirtualBox_wrappers.py
virtualbox/sdk/bindings/xpcom/idl/: VirtualBox_XPCOM.idl
virtualbox/sdk/bindings/xpcom/include/: VirtualBox_XPCOM.h
